syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zhenglin.tradeplatform.grpc.user";
option java_outer_classname = "UserServiceProto";

service UserService {
    //
    rpc checkUser (CheckUserRequest) returns (CheckUserResponse) ;
}
//
message CheckUserRequest{
    string userName= 1;
    string password= 2;
}

//
message CheckUserResponse{
    bool flag =1;
    string message = 2;
}